--- a/Assignment/package.json
+++ b/Assignment/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
+    "dagre": "^0.8.5",
+    "prismjs": "^1.30.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-simple-code-editor": "^0.14.1",
+    "react-syntax-highlighter": "^16.1.0",
+    "reactflow": "^11.11.4",
     "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
